@@ -5,11 +5,12 @@ Changes for 1.3.4.1
 -Fixed the invalid conversion of old sprites with a mask that is smaller than the front
 -Implemented usage of the SDL_GameController with some extras like using of the rumble and the battery status (Render of the status is not implemented yet)
 -Player now can quit the credits screen by pressing the Start button on the gamepad
--Fixed the glitchy rendering of the first frame at the main menu and at the world map when frame-skip is enabled
+-Fixed the glitched rendering of the first frame at the main menu and at the world map when frame-skip is enabled
 -Every gamepad model will keep it's individual settings per player
 -Added the "Reset to default" menu item to reset controls
 -Resolved the slow work of the world map on weak devices
 -Added the performance debug printing that you can activate by the F3 key
+-Automatically select the gamepad on startup if user didn't manually set up the keyboard usage
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
